--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
 /* Styles for Product Page Customization */
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
+
+
 body {
     padding-top: 30px;
     padding-bottom: 20px;
+    background-image: url("/images/background-beige.jpg");
     color: green;
 }
