--- a/main.css
+++ b/main.css
@@ -2,10 +2,16 @@
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
 
-
+/* General customization */
 body {
-    padding-top: 30px;
-    padding-bottom: 20px;
+    padding-top: 5rem;
+    padding-right: 5%;
+    padding-left: 5%;
     background-image: url("/images/background-beige.jpg");
-    color: green;
+    background-size: 100% 100%;
+    color: rgba(31, 15, 0, .95,);
+    font-family: Verdana, Geneva, sans-serif;
+font-size: 1.2rem;
+letter-spacing: -.05rem;
+word-spacing: .05rem;
 }
