--- a/main.css
+++ b/main.css
@@ -27,20 +27,22 @@ img {
 /* Zoom pictures*/
 
 .zoom {
-    transition: transform .2s; /* Animation */
+    transition: transform .2s;
+    /* Animation */
     width: 250px;
     height: 250px;
 }
 
 .zoom:hover {
-    transform: scale(1.25); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.25);
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 /* Parallaxs */
 
-.parallax-1 { 
+.parallax-1 {
     background-image: url("images/map.jpg");
-    height: 25rem; 
+    height: 25rem;
     background-attachment: fixed; scroll;
     background-position: center;
     background-repeat: no-repeat;
@@ -48,10 +50,10 @@ img {
     "img-responsive"
 }
 
-.parallax-2 { 
+.parallax-2 {
     background-image: url("images/letter.jpg");
-    height: 25rem; 
-    background-attachment: fixed; scroll;
+    height: 25rem;
+    background-attachment: fixed scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -107,6 +109,7 @@ button {
     html {
         font-size: 14pt;
     }
+
     article {
         width: 90%;
     }
