--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 /* General customization */
 body {
     padding-top: 4rem;
-    background-image: url("/images/bg.jpg");
+    background-image: url("images/bg.jpg");
     background-size: 100% 100%;
     color: rgba(31, 15, 0, .95, );
     font-family: Verdana, Geneva, sans-serif;
