--- a/main.css
+++ b/main.css
@@ -14,6 +14,17 @@ body {
     word-spacing: .05rem;
 }
 
+img {
+        max-width: 100%;
+        max-height: 100%;    
+}
+
+.btn-primary {
+
+    width: auto;
+
+}
+
 h1 {
     text-align: center
 }
