--- a/main.css
+++ b/main.css
@@ -18,7 +18,11 @@ img {
         max-width: 100%;
         max-height: 100%;    
 }
+.btn-primary {
 
+    width: auto;
+
+}
 h1 {
     text-align: center
 }
@@ -123,34 +127,3 @@ body {
     margin: 0;
 }
 
-
-/*  demo decor */
-
-#-demo-title {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 36px;
-    background-color: #D5FFD1;
-    color: #0F316C;
-    line-height: 36px;
-    font-weight: bold;
-    font-size: 16pt;
-    text-align: center;
-}
-
-#-demo-profile {
-    float: left;
-    height: 100%;
-    opacity: .4;
-}
-
-#-demo-profile:hover {
-    opacity: 1;
-}
-
-@media (max-width: 400px) {
-    #-demo-title {
-        font-size: 12pt;
-    }
-}
