--- a/main.css
+++ b/main.css
@@ -15,36 +15,40 @@ body {
 }
 
 img {
-        max-width: 100%;
-        max-height: 100%;    
-}
-.btn-primary {
-
-    width: auto;
-
-}
-h1 {
-    text-align: center
-}
-
-img {
+    max-width: 100%;
+    max-height: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* Zoom pictures*/
-
-.zoom {
-    transition: transform .2s;
-    /* Animation */
-    width: 250px;
-    height: 250px;
+.story {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
 }
 
-.zoom:hover {
-    transform: scale(1.25);
-    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+.author {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+}
+
+article {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-align: center
+}
+
+.btn-primary {
+    width: auto;
 }
 
 /* Parallaxs */
@@ -67,17 +71,37 @@ img {
     background-size: cover;
 }
 
-/* text to speech */
+/* Small screen adjustment */
 
-article {
-    width: 50%;
-    margin: auto;
-    line-height: 2;
+@media (max-width: 700px) {
+    html {
+        font-size: 14pt;
+    }
+
+    article {
+        width: 90%;
+    }
 }
 
 .buttons {
     margin-top: 25px;
 }
+
+.story {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+}
+
+.author {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+}
+
+/* text to speech */
 
 button {
     background: none;
@@ -112,18 +136,3 @@ button {
 #stop.stopped {
     background-image: url(https://rpsthecoder.github.io/js-speech-synthesis/stop1.svg);
 }
-
-@media (max-width: 700px) {
-    html {
-        font-size: 14pt;
-    }
-
-    article {
-        width: 90%;
-    }
-}
-
-body {
-    margin: 0;
-}
-
